--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,266 +22,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to make the dataset, the raw data must be in a directory 'Not_Zip' and named with its state name, e.g. 'Not_Zip/AZ.csv' for Arizona"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### States to keep:\n",
-    "\n",
-    "Republicans: \n",
-    "1. Arizona (3.5 million)\n",
-    "2. Ohio (7.2 million) -> discarded\n",
-    "3. South Carolina (9 million)\n",
-    "4. Texas (27 million)\n",
-    "\n",
-    "Democrats:\n",
-    "1. California (32 million)\n",
-    "2. Connecticut (1 million)\n",
-    "3. Illinois (13 million)\n",
-    "4. Rhode Island (510 000) -> discarded\n",
-    "\n",
-    "### Features to take:\n",
-    "1. Date\n",
-    "2. Race\n",
-    "3. Sex\n",
-    "\n",
-    "Take 300 000 datapoint per set -> we end with a dataset with roughly 2 million datapoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH = 'Not_Zip/'\n",
-    "cols_to_use = ['date','subject_race', 'subject_sex', 'search_conducted']\n",
-    "States = ['AZ', 'SC', 'TX', 'CA', 'CT', 'IL']\n",
-    "number_subsamples = 300000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Min_date = 2013-10-01 00:00:00, Max_date = 2015-10-01 00:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get the biggest time range for which all datasets contains values\n",
-    "min_date = dt.datetime(1900,1,1)\n",
-    "max_date = dt.datetime(2030,1,1)\n",
-    "\n",
-    "for state in States:\n",
-    "    \n",
-    "    df = pd.read_csv(PATH + state + '.csv', usecols = cols_to_use)\n",
-    "    df.dropna(inplace = True)\n",
-    "    df.date = pd.to_datetime(df.date)\n",
-    "    df_min_date = df.date.min()\n",
-    "    df_max_date = df.date.max()\n",
-    "    \n",
-    "    if df_min_date > min_date:\n",
-    "        min_date = df_min_date\n",
-    "    \n",
-    "    if df_max_date < max_date:\n",
-    "        max_date = df_max_date\n",
-    "\n",
-    "print('Min_date = {}, Max_date = {}'.format(min_date, max_date))    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "State AZ processed.\n",
-      "State SC processed.\n",
-      "State TX processed.\n",
-      "State CA processed.\n",
-      "State CT processed.\n",
-      "State IL processed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame([], columns = ['date', 'subject_race', 'subject_sex', 'search_conducted', 'State', 'Partisanship'])\n",
-    "republicans = ['TX', 'SC', 'AZ']\n",
-    "for state in States:\n",
-    "    \n",
-    "    # Get the dataset with only the desired columns\n",
-    "    df_state = pd.read_csv(PATH + state + '.csv', usecols = cols_to_use)\n",
-    "    \n",
-    "    # Drop nan values\n",
-    "    df_state.dropna(inplace = True)\n",
-    "    \n",
-    "    # Only keep Hispanic, Black and White drivers\n",
-    "    df_state = df_state.iloc[[x in ['hispanic', 'black', 'white'] for x in df_state.subject_race]]\n",
-    "    \n",
-    "    # Keep only data in the good time range\n",
-    "    df_state.date = pd.to_datetime(df_state.date)\n",
-    "    df_state = df_state[(df_state.date > min_date) & (df_state.date < max_date)]\n",
-    "    \n",
-    "    # Randomly create indices of the datapoints to keep\n",
-    "    inds = np.random.permutation(range(df_state.shape[0]))[:number_subsamples]\n",
-    "    \n",
-    "    # Keep only the subsample\n",
-    "    df_state = df_state.iloc[inds]\n",
-    "    \n",
-    "    # Append the state so that we know where the datapoints come from\n",
-    "    df_state['State'] = df_state.date.apply(lambda x: state)\n",
-    "    df_state['Partisanship'] = df_state.State.apply(lambda x: 'R' if x in republicans else 'D')\n",
-    "    \n",
-    "    # Concatenate with the final dataset\n",
-    "    df = pd.concat((df, df_state))\n",
-    "    \n",
-    "    del df_state\n",
-    "    \n",
-    "    print('State {} processed.'.format(state))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('data.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>subject_race</th>\n",
-       "      <th>subject_sex</th>\n",
-       "      <th>search_conducted</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Partisanship</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-02-05</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-01-31</td>\n",
-       "      <td>hispanic</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-02-02</td>\n",
-       "      <td>white</td>\n",
-       "      <td>female</td>\n",
-       "      <td>False</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-05-25</td>\n",
-       "      <td>hispanic</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-05-01</td>\n",
-       "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>False</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>R</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date subject_race subject_sex  search_conducted State Partisanship\n",
-       "0  2014-02-05        white        male             False    AZ            R\n",
-       "1  2014-01-31     hispanic        male             False    AZ            R\n",
-       "2  2014-02-02        white      female             False    AZ            R\n",
-       "3  2014-05-25     hispanic        male             False    AZ            R\n",
-       "4  2015-05-01        white        male             False    AZ            R"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Make the logistic Regression to get the search rates (no interaction term)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_search_rates(df_, formula):\n",
+    "    \n",
+    "    df = df_.copy()\n",
+    "    # First we transform the datetime to ordinal values\n",
+    "    df.date = pd.to_datetime(df.date)\n",
+    "    df.date = df.date.map(dt.datetime.toordinal)\n",
+    "\n",
+    "    # Standardize date\n",
+    "    date_mean = df.date.mean()\n",
+    "    date_std = df.date.std()\n",
+    "    df.date = (df.date - date_mean) / date_std\n",
+    "\n",
+    "    # Make search_conducted be 0 or 1\n",
+    "    df.search_conducted =  df.search_conducted.astype(int)\n",
+    "\n",
+    "    # Compute the search rates using a logistic regression\n",
+    "\n",
+    "    model = smf.logit(formula = formula, data = df).fit()\n",
+    "\n",
+    "    search_rates = model.predict()\n",
+    "    \n",
+    "    return search_rates, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -290,45 +66,25 @@
      "text": [
       "Optimization terminated successfully.\n",
       "         Current function value: 0.150392\n",
-      "         Iterations 29\n"
+      "         Iterations 8\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv('data.csv')\n",
-    "# First we transform the datetime to ordinal values\n",
-    "df.date = pd.to_datetime(df.date)\n",
-    "df.date = df.date.map(dt.datetime.toordinal)\n",
     "\n",
-    "# Make search_conducted be 0 or 1\n",
-    "df.search_conducted =  df.search_conducted.astype(int)\n",
-    "\n",
-    "# Compute the search rates using a logistic regression and cross validation\n",
-    "#features = df[['date', 'subject_race', 'subject_sex', 'Partisanship']]\n",
-    "#features = pd.get_dummies(features)\n",
-    "#labels = df['search_conducted']\n",
-    "\n",
-    "#model = lm.LogisticRegression().fit(features, labels)\n",
-    "\n",
-    "model = smf.logit(formula = 'search_conducted ~ date + C(subject_race) + C(subject_sex) + C(Partisanship)', data = df).fit()\n",
-    "\n",
-    "#search_rates = model.predict_proba(features)[:,1]\n",
-    "search_rates = model.predict()\n",
+    "search_rates, _ = compute_search_rates(df, 'search_conducted ~ date + C(subject_race) + C(Partisanship) + C(subject_sex)')\n",
     "\n",
     "# Append the search rates\n",
     "df['search_rates'] = search_rates\n",
     "\n",
     "# Drop search_conducted, we don't need anymore\n",
-    "df.drop('search_conducted', axis = 1, inplace = True)\n",
-    "\n",
-    "# Put the dates into datetime again\n",
-    "df.date = df.date.map(dt.date.fromordinal)\n",
-    "df.date = pd.to_datetime(df.date)"
+    "df.drop('search_conducted', axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -411,15 +167,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        date subject_race subject_sex State Partisanship  search_rates\n",
-       "0 2014-02-05        white        male    AZ            R      0.027264\n",
-       "1 2014-01-31     hispanic        male    AZ            R      0.046384\n",
-       "2 2014-02-02        white      female    AZ            R      0.016356\n",
-       "3 2014-05-25     hispanic        male    AZ            R      0.045369\n",
-       "4 2015-05-01        white        male    AZ            R      0.024938"
+       "         date subject_race subject_sex State Partisanship  search_rates\n",
+       "0  2014-02-05        white        male    AZ            R      0.027264\n",
+       "1  2014-01-31     hispanic        male    AZ            R      0.046384\n",
+       "2  2014-02-02        white      female    AZ            R      0.016356\n",
+       "3  2014-05-25     hispanic        male    AZ            R      0.045369\n",
+       "4  2015-05-01        white        male    AZ            R      0.024938"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,59 +206,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make the logistic Regression to get the search rates (interaction term)"
+    "# Make the logistic Regression to get the search rates (with interaction term)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Maximum number of iterations has been exceeded.\n",
+      "Optimization terminated successfully.\n",
       "         Current function value: 0.150300\n",
-      "         Iterations: 35\n"
+      "         Iterations 8\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv('data.csv')\n",
-    "# First we transform the datetime to ordinal values\n",
-    "df.date = pd.to_datetime(df.date)\n",
-    "df.date = df.date.map(dt.datetime.toordinal)\n",
     "\n",
-    "# Make search_conducted be 0 or 1\n",
-    "df.search_conducted =  df.search_conducted.astype(int)\n",
-    "\n",
-    "# Compute the search rates using a logistic regression and cross validation\n",
-    "#features = df[['date', 'subject_race', 'subject_sex', 'Partisanship']]\n",
-    "#features = pd.get_dummies(features)\n",
-    "#labels = df['search_conducted']\n",
-    "\n",
-    "#model = lm.LogisticRegression().fit(features, labels)\n",
-    "\n",
-    "model = smf.logit(formula = 'search_conducted ~ date + C(subject_race):C(Partisanship) + C(subject_sex)', data = df).fit()\n",
-    "\n",
-    "#search_rates = model.predict_proba(features)[:,1]\n",
-    "search_rates = model.predict()\n",
+    "search_rates, _ = compute_search_rates(df, 'search_conducted ~ date + C(subject_race):C(Partisanship) + C(subject_sex)')\n",
     "\n",
     "# Append the search rates\n",
     "df['search_rates'] = search_rates\n",
     "\n",
     "# Drop search_conducted, we don't need anymore\n",
-    "df.drop('search_conducted', axis = 1, inplace = True)\n",
-    "\n",
-    "# Put the dates into datetime again\n",
-    "df.date = df.date.map(dt.date.fromordinal)\n",
-    "df.date = pd.to_datetime(df.date)"
+    "df.drop('search_conducted', axis = 1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -585,15 +321,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        date subject_race subject_sex State Partisanship  search_rates\n",
-       "0 2014-02-05        white        male    AZ            R      0.028441\n",
-       "1 2014-01-31     hispanic        male    AZ            R      0.048639\n",
-       "2 2014-02-02        white      female    AZ            R      0.017085\n",
-       "3 2014-05-25     hispanic        male    AZ            R      0.047571\n",
-       "4 2015-05-01        white        male    AZ            R      0.026005"
+       "         date subject_race subject_sex State Partisanship  search_rates\n",
+       "0  2014-02-05        white        male    AZ            R      0.028441\n",
+       "1  2014-01-31     hispanic        male    AZ            R      0.048639\n",
+       "2  2014-02-02        white      female    AZ            R      0.017085\n",
+       "3  2014-05-25     hispanic        male    AZ            R      0.047571\n",
+       "4  2015-05-01        white        male    AZ            R      0.026005"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
